--- a/style.css
+++ b/style.css
@@ -1,71 +1,118 @@
 body {
-  background-image     : linear-gradient(rgba(0, 0, 0, 10), rgba(0, 0, 0, 0.5)), url("images/bible.jpg");
-  background-repeat    : no-repeat;
+  background-image: linear-gradient(rgba(0, 0, 0, 10), rgba(0, 0, 0, 0.5)),
+    url("images/bible.jpg");
+  background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position  : center;
-  background-size      : cover;
+  background-position: center;
+  background-size: cover;
   background-blend-mode: darken;
-  padding              : 1px;
+  padding: 1px;
 }
 
 #result {
   color: white;
+}
 
+#chooseFast {
+  position: fixed;
+  width: auto;
+  height: 3.618rem;
+  left: 50%;
+  bottom: -25px;
+  padding-top: 0.5em;
+  padding-bottom: 1.4em;
+  padding-left: 1.62em;
+  padding-right: 1.62em;
+  margin: 0;
+  line-height: 1.38;
+  text-align: center;
+  font-size: 1em;
+  font-weight: 700;
+  border: 2px solid;
+  border-radius: 0px;
+  border-top-left-radius: 35px;
+  border-top-right-radius: 35px;
+  z-index: 999;
+  -webkit-box-shadow: 0 0 2em rgb(0 0 0 / 40%);
+  box-shadow: 0 0 2em rgb(0 0 0 / 40%);
+  opacity: 1;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 h3 {
   display: flex;
-  color  : white;
-  height : 80%;
-  margin : auto;
+  color: white;
+  height: 80%;
+  margin: auto;
 }
 
-
 .text {
-
-  color        : white;
+  color: white;
   text-overflow: ellipsis;
-  font-family  : cursive;
-
-
+  font-family: cursive;
 }
 
 .grid {
-  display  : flex;
+  display: flex;
   flex-wrap: wrap;
-  margin   : auto;
-  width    : 400px;
-  height   : 80%;
-  padding  : 1px;
+  margin: auto;
+  width: 400px;
+  height: 80%;
+  padding: 1px;
 }
 
 .back {
-  width : 120px;
+  width: 120px;
   height: 80px;
 }
 
 .matched {
   background-color: rgba(123, 192, 19, 0.315) !important;
-  background      : #18d34dcc;
-  border          : 10px;
-  transition      : 0s linear;
-  padding         : 5px;
-
+  background: #18d34dcc;
+  border: 10px;
+  transition: 0s linear;
+  padding: 5px;
 }
 
 .card {
-
-  width          : 120px;
-  height         : 80px;
-  overflow       : hidden;
-  text-overflow  : ellipsis;
-  text-align     : center;
+  width: 120px;
+  height: 80px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
   text-align-last: auto;
-  padding        : 1px;
-  cursor         : pointer;
-
+  padding: 1px;
+  cursor: pointer;
 }
 
 p {
   word-wrap: break-word;
 }
+
+/* Back up */
+/* @media only screen and (max-width: 54.9375em) {
+  .menu-toggle {
+    position: fixed;
+    width: auto;
+    height: 3.618rem;
+    left: 50%;
+    bottom: -2px;
+    padding: 0 1.62em;
+    margin: 0;
+    line-height: 1.38;
+    text-align: center;
+    font-size: 1em;
+    font-weight: 700;
+    border: 2px solid;
+    border-radius: 2px;
+    z-index: 999;
+    -webkit-box-shadow: 0 0 2em rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 2em rgba(0, 0, 0, 0.4);
+    opacity: 1;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+  }
+} */
