--- a/style.css
+++ b/style.css
@@ -9,9 +9,20 @@ body {
   padding: 1px;
 }
 
-/* TEXTs & FONTs */
+                          /* TEXTs & FONTs */
 .main {
   color: white;
+}
+
+.text {
+  color: white;
+  font-size: 1.5em;
+  width: -moz-fit-content;
+  padding: 5px;
+  margin-bottom: 1em;
+  text-overflow: ellipsis;
+  text-align: center;
+  text-align-last: auto;
 }
 
 #result {
@@ -36,55 +47,9 @@ body {
   transition-delay: 20ms;
 }
 
-.text {
-  color: white;
-  font-size: 1.5em;
-  width: -moz-fit-content;
-  padding: 5px;
-  margin-bottom: 1em;
-  text-overflow: ellipsis;
-  text-align: center;
-  text-align-last: auto;
-}
-/* #chooseFast {
-left: 50%;
-}
-#chooseMore {
-  left: 56%;
-}
-#chooseProverbs {
-  left: 43%;
-}
 
-#chooseFast, #chooseMore, #chooseProverbs  {
-  position: fixed;
-  width: auto;
-  height: 3.618rem;
-  
-  bottom: -25px;
-  padding-top: 0.5em;
-  padding-bottom: 1.4em;
-  padding-left: 1.62em;
-  padding-right: 1.62em;
-  margin: 0;
-  line-height: 1.38;
-  text-align: center;
-  font-size: 1em;
-  font-weight: 700;
-  border: 2px solid;
-  border-radius: 0px;
-  border-top-left-radius: 35px;
-  border-top-right-radius: 35px;
-  z-index: 999;
-  -webkit-box-shadow: 0 0 2em rgb(0 0 0 / 40%);
-  box-shadow: 0 0 2em rgb(0 0 0 / 40%);
-  opacity: 1;
-  -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
-} */
 
-/* GRID AND CARDS */
+                    /* GRID AND CARDS */
 .grid {
   display: flex;
   flex-wrap: wrap;
@@ -132,23 +97,29 @@ left: 50%;
   top: 5px;
 }
 
-/* BUTTONS */
+               /* BUTTONS */
 .btn {
   border: 2px solid #3498db;
   background: none;
+  margin: 2px;
   padding: 5px 10px;
   cursor: pointer;
-  transition: 1.2s;
+  transition: 0.8s;
+  font-size: 100%;
 }
 
-.container {
+/* .container {
   display: flex;
   margin: 5px;
   flex-wrap: wrap;
   text-align: center;
   margin-top: 0px;
+} */
+.btnDiv {
+  text-align: center;
+  margin-top: 6px;
+  margin-bottom: 10px;
 }
-
 .btn1,
 .btn2 {
   background-color: #3498db;
@@ -157,21 +128,24 @@ left: 50%;
 .btn4 {
   color: #fff;
 }
+
 .btn1:hover,
 .btn2:hover {
   color: #fff;
+  font-weight: bolder;
 }
+
 .btn3:hover,
 .btn4:hover {
   color: #3498db;
 }
 .btn::before {
-  content: "";
+  content: " ";
   position: absolute;
   left: 0;
   width: 100%;
   height: 0%;
-  background: #3498db;
+  background: #50db34;
   z-index: -1;
   transition: 0.8s;
 }
@@ -183,8 +157,11 @@ left: 50%;
 .btn3:active {
   color: red;
 }
+.btn3:visited {
+  color: rgb(72, 255, 0);
+}
 .btn3:focus {
-  color: red;
+  color: rgb(255, 0, 221);
 }
 .btn2::before,
 .btn4::before {
@@ -203,6 +180,7 @@ left: 50%;
 .btn4:hover::before {
   height: 0%;
 }
+
 @media screen and (max-width: 659px) {
   .card {
     width: 160px;
