--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ body {
   flex-direction: row;
 }
 
+#home {
+  position: fixed;
+  bottom: 7px;
+}
+
                           /* TEXTs & FONTs */
 .main {
       display: flex;
@@ -26,6 +31,16 @@ body {
   text-align: center;
   
 }
+ #menu {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    color: white;
+  text-align: center;
+ }
 
 h3 {
   color: white;
