--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
     flex-wrap: wrap;
     color: white;
   text-align: center;
+  margin-top: 100px;
 }
 
  #menu {
@@ -152,7 +153,7 @@ h3 {
   padding: 5px 10px;
   cursor: pointer;
   transition: 0.8s;
-  font-size: 150%;
+  font-size: 250%;
   
 }
 
